fix: close button z-index in setting dialog

--- a/web/src/less/setting-dialog.less
+++ b/web/src/less/setting-dialog.less
@@ -11,7 +11,7 @@
       .hide-scroll-bar();
 
       > .close-btn {
-        @apply flex flex-col justify-center items-center absolute top-4 right-4 w-6 h-6 rounded hover:bg-gray-200 hover:shadow;
+        @apply z-1 flex flex-col justify-center items-center absolute top-4 right-4 w-6 h-6 rounded bg-white hover:bg-gray-200 hover:shadow;
       }
 
       > .section-selector-container {
